--- a/FRONTEND/src/components/Navbar/Navbar.css
+++ b/FRONTEND/src/components/Navbar/Navbar.css
@@ -24,6 +24,6 @@
 @media only screen and (max-width: 768px)
 {
     .nav_logo {
-        width: 5rem;
+        width: 7rem;
     }
 }
